--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
-    "content": "velite --clean"
+    "content": "velite --clean",
+     "indexnow": "node scripts/indexnow.js"
   },
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.12.0",
