--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "indexnow": "node scripts/indexnow.js"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.23.0",
     "@giscus/react": "^3.1.0",
     "@lottiefiles/dotlottie-react": "^0.12.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
