--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "date-fns": "^4.1.0",
     "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.1",
+    "firebase": "^11.9.1",
+    "framer-motion": "^12.19.1",
     "github-slugger": "^2.0.0",
     "next": "^15.2.4",
     "next-sitemap": "^4.2.2",
