--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.23.0",
     "@giscus/react": "^3.1.0",
+    "@lexical/react": "^0.32.1",
     "@lottiefiles/dotlottie-react": "^0.12.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.50.1",
@@ -26,17 +27,22 @@
     "firebase": "^11.9.1",
     "framer-motion": "^12.19.1",
     "github-slugger": "^2.0.0",
+    "lexical": "^0.32.1",
     "next": "^15.2.4",
     "next-sitemap": "^4.2.2",
     "postcss": "^8.4.49",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "quill": "^2.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.45.4",
+    "react-markdown": "^10.1.0",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-pretty-code": "^0.14.0",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
+    "resend": "^4.6.0",
     "shiki": "^1.24.2",
     "tailwindcss": "^3.4.17"
   },
