--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "framer-motion": "^12.19.1",
     "github-slugger": "^2.0.0",
     "lexical": "^0.32.1",
+    "lucide-react": "^0.523.0",
     "next": "^15.2.4",
     "next-sitemap": "^4.2.2",
     "postcss": "^8.4.49",
