--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "date-fns": "^4.1.0",
     "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.1",
-    "firebase": "^11.9.1",
+    "firebase": "^11.10.0",
     "framer-motion": "^12.19.1",
     "github-slugger": "^2.0.0",
     "lexical": "^0.32.1",
@@ -35,6 +35,7 @@
     "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.45.4",
     "react-markdown": "^10.1.0",
