--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@supabase/supabase-js": "^2.50.1",
     "@tailwindcss/forms": "^0.5.5",
     "@tailwindcss/typography": "^0.5.9",
+    "@uploadthing/react": "^7.3.2",
     "autoprefixer": "^10.4.20",
     "date-fns": "^4.1.0",
     "eslint": "^9.17.0",
@@ -38,6 +39,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.45.4",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
@@ -46,7 +48,10 @@
     "remark-gfm": "^4.0.0",
     "resend": "^4.6.0",
     "shiki": "^1.24.2",
-    "tailwindcss": "^3.4.17"
+    "slugify": "^1.6.6",
+    "sonner": "^2.0.6",
+    "tailwindcss": "^3.4.17",
+    "uploadthing": "^5.7.4"
   },
   "devDependencies": {
     "encoding": "^0.1.13",
