--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@supabase/supabase-js": "^2.50.1",
     "@tailwindcss/forms": "^0.5.5",
     "@tailwindcss/typography": "^0.5.9",
-    "@uploadthing/react": "^7.3.2",
     "autoprefixer": "^10.4.20",
     "date-fns": "^4.1.0",
     "eslint": "^9.17.0",
@@ -50,8 +49,7 @@
     "shiki": "^1.24.2",
     "slugify": "^1.6.6",
     "sonner": "^2.0.6",
-    "tailwindcss": "^3.4.17",
-    "uploadthing": "^5.7.4"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "encoding": "^0.1.13",
