--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@giscus/react": "^3.1.0",
     "@lexical/react": "^0.32.1",
     "@lottiefiles/dotlottie-react": "^0.12.0",
+    "@remirror/extension-heading": "^3.0.1",
+    "@remirror/extension-image": "^3.0.1",
+    "@remirror/pm": "^3.0.1",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.50.1",
     "@tailwindcss/forms": "^0.5.5",
@@ -32,6 +35,7 @@
     "next": "^15.2.4",
     "next-sitemap": "^4.2.2",
     "postcss": "^8.4.49",
+    "prosemirror-model": "^1.25.2",
     "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
