--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.20",
     "date-fns": "^4.1.0",
+    "emailjs-com": "^3.2.0",
     "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.1",
     "firebase": "^11.10.0",
